# gnucobol-docker

./: ABOUT-NLS  AUTHORS  ChangeLog  DEPENDENCIES  Dockerfile  HACKING  Makefile.am  Makefile.in  NEWS  README  THANKS  TODO  aclocal.m4  aminclude_static.am  config.h.in  configure  configure.ac  libcob.h  tarstamp.h
build_aux/: ChangeLog  bootstrap  create_mingw_bindist.sh  pre-inst-env.in
cobc/: ChangeLog  Makefile.am  Makefile.in  cobc.1  cobc.c  cobc.h  codegen.c  codeoptim.c  codeoptim.def  config.c  config.def  error.c  field.c  flag.def  help.c  parser.c  parser.h  parser.y  pplex.c  pplex.l  ppparse.c  ppparse.def  ppparse.h  ppparse.y  reserved.c  scanner.c  scanner.l  tree.c  tree.h  typeck.c  warning.def
config/: ChangeLog  Makefile.in  acu-strict.conf  acu.conf  acu.words  bs2000-strict.conf  bs2000.conf  bs2000.words  cobol2002.conf  cobol2002.words  cobol2014.conf  cobol2014.words  cobol85.conf  cobol85.words  default.conf  ibm-strict.conf  ibm.conf  ibm.words  lax.conf-inc  mf-strict.conf  mf.conf  mf.words  mvs-strict.conf  mvs.conf  mvs.words  realia-strict.conf  rm-strict.conf  rm.conf  rm.words  runtime.cfg  xopen.conf
copy/: ChangeLog  Makefile.in  screenio.cpy  xfhfcd.cpy  xfhfcd3.cpy
doc/: ChangeLog  Makefile.am  Makefile.in  cbchelp.tex  cbconf.tex  cbhelp.tex  cbintr.tex  cbrese.tex  cbrunt.tex  cobcinfo.sh  gnucobol.info  gnucobol.texi  stamp-vti  version.texi
extras/: CBL_OC_DUMP.cob  Makefile.am  Makefile.in  README
lib/: ChangeLog  Makefile.am  Makefile.in  dummymac.c  gettext.h
libcob/: ChangeLog  Makefile.am  Makefile.in  call.c  cobgetopt.c  cobgetopt.h  coblocal.h  common.c  common.h  exception.def  fileio.c  intrinsic.c  mlio.c  move.c  numeric.c  reportio.c  screenio.c  strings.c  system.def  termio.c
po/: ChangeLog  LINGUAS  de.gmo  de.po  en@boldquot.gmo  en@boldquot.po  en@quot.gmo  en@quot.po  es.gmo  es.po  fr.gmo  fr.po  gnucobol.pot  it.gmo  it.po  ja.gmo  ja.po  nl.gmo  nl.po  pt.gmo  pt.po  sr.gmo  sr.po  sv.gmo  sv.po
tests/: ChangeLog  Makefile.am  Makefile.in  atlocal.in  listings-sed.sh  package.m4  run_prog_manual.sh.in  testsuite  testsuite.at  testsuite_manual  testsuite_manual.at
tests/cobol85/: ChangeLog  Makefile.am  Makefile.in  Makefile.module.in  README  expand.pl  report.pl  summary.pl
tests/testsuite.src/: configuration.at  data_binary.at  listings.at  numeric-display.cob  numeric-dump.cob  run_accept.at  run_extensions.at  run_file.at  run_functions.at  run_fundamental.at  run_initialize.at  run_manual_screen.at  run_misc.at  run_ml.at  run_refmod.at  run_reportwriter.at  run_subscripts.at  syn_copy.at  syn_definition.at  syn_file.at  syn_functions.at  syn_misc.at  syn_move.at  syn_multiply.at  syn_occurs.at  syn_redefines.at  syn_refmod.at  syn_reportwriter.at  syn_screen.at  syn_set.at  syn_subscripts.at  syn_value.at  used_binaries.at
